Fixed footer overlapping issue with projects list on mobile, min heigh with viewport defined

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -30,8 +30,7 @@ a {
 }
 
 .content-section-b {
-
-  height: 100%;
+  min-height: 100vh;
 
 }
 /* 1. Define the appearance animation */
